<resources>
    <string name="app_name">FattoFitv2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Anasayfa</string>
    <string name="menu_gallery">Galeri</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="action_settings">Ayarlar</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Doğum Tarihi</string>
    <string name="gender">Cinsiyet</string>
    <string name="male">Erkek</string>
    <string name="female">Kadın</string>
    <string name="height">Boy</string>
    <string name="activity_level">Aktivite Düzeyi</string>
    <string name="weight">Kilo</string>
    <string name="target_weight">Hedef Kilo</string>
    <string name="mesurment">Ölçü</string>
    <string name="cm">cm</string>
    <string name="feet_inches">feet ve inch</string>
    <string name="kg">kg</string>
    <string name="pound">pound</string>


    <string-array name="array_mesurments">
        <item>Metrik</item>
        <item>Feet/Inch</item>
    </string-array>

    <string name="metric">Metrik</string>
    <string name="imperial">Feet/Inch</string>

    <string name="day">Gün</string>
    <string name="month">Ay</string>
    <string name="year">Yıl</string>

    <string-array name="array_months">
        <item>Ocak</item>
        <item>Şubat</item>
        <item>Mart</item>
        <item>Nisan</item>
        <item>Mayıs</item>
        <item>Haziran</item>
        <item>Temmuz</item>
        <item>Agustos</item>
        <item>Eylül</item>
        <item>Ekim</item>
        <item>Kasım</item>
        <item>Aralık</item>
    </string-array>
    <string name="january">Ocak</string>
    <string name="february">Şubat</string>
    <string name="march">Mart</string>
    <string name="april">Nisan</string>
    <string name="may">Mayıs</string>
    <string name="june">Haziran</string>
    <string name="july">Temmuz</string>
    <string name="august">Agustos</string>
    <string name="september">Eylül</string>
    <string name="october">Ekim</string>
    <string name="november">Kasım</string>
    <string name="december">Aralık</string>
    <string name="blank"> </string>


    <string-array name="array_activity_levels">
        <item>Az egzersiz/ Hiç egzersiz yapmıyorum.</item>
        <item>Hafif Egzersiz (1–3 gün haftada)</item>
        <item>Orta Düzeyde Egzersiz (3–5 gün haftada)</item>
        <item>Ağır Egzersiz (6–7 gün haftada)</item>
        <item>Çok Ağır Egzersiz/Pro(Günde 2 kere, Aşırı ağır antrenman)</item>
    </string-array>

    <string name="i_want_to">Hedef</string>
    <string name="i_want">Hedef</string>
    <string name="sign_up">KAYIT OL</string>

    <string name="weekly_goal">HAFTALIK HEDEF</string>


    <string-array name="array_weekly_goals">
        <item>Kilo ver</item>
        <item>Kilo Al</item>
    </string-array>

    <string-array name="array_weekly_goals_kg">
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>


    </string-array>


    <string name="kg_each_week">Haftada 1 kg</string>
    <string name="pounds_each_week">Haftada 1 Pound</string>

    <string name="lets_go">BAŞLAYALIM!</string>

    <string name="home">Anasayfa</string>
    <string name="profile">Profil</string>
    <string name="goal">Hedef</string>
    <string name="categories">Kategoriler</string>
    <string name="food">Yemekler</string>

    <string name="add">Ekle</string>
    <string name="delete">Sil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name">İsim</string>
    <string name="parent">Parent</string>
    <string name="save">Kaydet</string>
    <string name="are_you_sure_you_want_to_delete">Silmek istediğinden Emin misin?</string>
    <string name="cancel">Çık</string>
    <string name="calories_table">Kalori tablosu</string>
    <string name="energy">Enerji</string>
    <string name="proteins">Protein</string>
    <string name="carbs">Karbonhidrat</string>
    <string name="fat">Yağ</string>
    <string name="per_hundred_gran">100gram</string>
    <string name="per_meal">Yemek başına</string>
    <string name="manufactor">Üretici</string>
    <string name="about">Hakkında</string>
    <string name="description">Açıklama</string>
    <string name="general">Genel</string>
    <string name="serving">Servis</string>
    <string name="number">Number</string>


    <string name="word">-</string>

    <!-- dersten sonra yap -->
    <string name="barcode">---</string>


    <string name="category">Kategori</string>
    <string name="main">Ana kategori</string>
    <string name="sub">Alt kategori</string>
    <string name="current_status">Güncel Durum</string>
    <string name="target">Hedef</string>
    <string name="my_goal">Hedefim</string>
    <string name="status">Durum</string>
    <string name="method">Metod</string>
    <string name="bmr">BMR</string>
    <string name="numbers">Detaylar</string>
    <string name="diet">Diyet</string>
    <string name="with_activity">Aktivite ile</string>
    <string name="with_activity_and_diet">Aktivite ve diyet ile </string>

    <string name="if_you_want_to_keep_your_weight">Kilonu korumak istiyorsan</string>
    <string name="if_you_want_to_loose_weight">Kilo kaybetmek istiyorsan</string>
    <string name="if_you_want_to">If you want to</string>
    <string name="keep_your_weight">Kilonu koru</string>
    <string name="loose_x_kg_week_with_out_exercising">Egzersizsiz haftada x kilo kaybet</string>
    <string name="without_activity">Etkinliksiz</string>
    <string name="advanced">Detay</string>
    <string name="with_activity_">Etkinlikli</string>
    <string name="edit">Düzenle</string>

    <string name="password">Şifre</string>
    <string name="alias">Takma ad</string>
    <string name="activity">Aktivite</string>
    <string name="breakfast">Kahvaltı</string>
    <string name="lunch">Öğlen Yemeği</string>
    <string name="before_training">Antrenmandan önce</string>
    <string name="after_training">Antrenmandan sonra</string>
    <string name="dinner">Akşam Yemeği</string>
    <string name="snacks">Atıştırmalıklar</string>
    <string name="supper">Supplementler</string>

    <string name="portion_size">Porsiyon boyutu</string>
    <string name="portion_size_gram">Porsiyon boyutu gram</string>
    <string name="pcs">Servis</string>
    <string name="gram">gram</string>
    <string name="add_to_diary">Günlüğe ekle</string>
    <string name="unlink">Vazgeç</string>
    <string name="goal_with_activity">Goal with activity</string>
    <string name="sum">Sum</string>
    <string name="remaining">Kalan</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="select_meal">Öğün seç</string>
</resources>
