<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.atakanbalta.fattofitv2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.atakanbalta.fattofitv2.ProfileFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_goal"
        android:name="com.atakanbalta.fattofitv2.GoalFragment"
        android:label="@string/goal"
        tools:layout="@layout/fragment_goal" >
        <action
            android:id="@+id/action_nav_goal_to_nav_categories"
            app:destination="@id/nav_categories" />
    </fragment>

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.atakanbalta.fattofitv2.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_nav_categories_to_nav_home"
            app:destination="@id/nav_categories" />
    </fragment>
    <fragment
        android:id="@+id/nav_food"
        android:name="com.atakanbalta.fattofitv2.FoodFragment"
        android:label="@string/food"
        tools:layout="@layout/fragment_food" >
        <action
            android:id="@+id/action_nav_food_to_nav_goal"
            app:destination="@id/nav_goal" />
    </fragment>

</navigation>