<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3DF0F6"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />
        <!-- //Logo -->

        <!-- Error handling -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewError"
                    android:layout_width="77dp"
                    android:layout_height="53dp"
                    android:src="@drawable/dialog_error" />

                <TextView
                    android:id="@+id/textViewErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Error!" /><!-- @string/blank -->
            </TableRow>
        </TableLayout>
        <!-- //Error handling -->


        <!-- Table layout -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Email ve password-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/email"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:text="Şifre" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

            </TableRow>
            <!-- //Email ve password -->


            <!-- Date of Birth -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/date_of_birth" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <Spinner
                            android:id="@+id/spinnerDOBDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <Spinner
                            android:id="@+id/spinnerDOBMonth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/array_months" />

                        <Spinner
                            android:id="@+id/spinnerDOBYear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>


                </TableLayout>

            </TableRow>
            <!-- //Date of Birth -->


            <!-- Gender -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/gender" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <RadioGroup
                            android:id="@+id/radioGroupGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonGenderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:checked="true"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/radioButtonGenderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                        </RadioGroup>
                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/textViewx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank" />

            </TableRow>
            <!-- //Gender -->

            <!-- Mesurment -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mesurment" />

                <Spinner
                    android:id="@+id/spinnerMesurment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_mesurments" />


            </TableRow>
            <!-- //Mesurment -->

            <!-- Height -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/height" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextHeightCm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <EditText
                            android:id="@+id/editTextHeightInches"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textViewCm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cm" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <!-- //Height -->


            <!-- Weight -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/weight" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textViewKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kg" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <!-- //Weight -->

            <!-- Activity Level -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_level" />

                <Spinner
                    android:id="@+id/spinnerActivityLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_activity_levels" />

            </TableRow>
            <!-- //Activity Level -->

            <!-- Submit button -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/blank" />

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/blank" />

            </TableRow>
            <!-- //Submit button -->


        </TableLayout>

    </LinearLayout>

</ScrollView>